--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Tareas Académicas | Kianna</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.simple.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -14,9 +14,9 @@
             <div class="header-container">
                 <div class="logo">
                     <i class="fas fa-tasks"></i>
-                    <span>Gestor de Tareas</span>
+                    <span>Gestor de Tareas. Kianna (∩^o^)⊃━☆</span>
                 </div>
-                <button id="new-task-btn" class="btn btn-primary">
+                <button type="button" id="btn-nueva-tarea" class="btn btn-primary">
                     <i class="fas fa-plus"></i> Nueva Tarea
                 </button>
             </div>
@@ -28,25 +28,25 @@
             <section class="controls-section">
                 <div class="controls-left">
                     <div class="filter-group">
-                        <label for="filter-subject">Por Materia:</label>
-                        <select id="filter-subject" class="filter-select">
+                        <label for="filtro-materia">Por Materia:</label>
+                        <select id="filtro-materia" class="filter-select">
                             <option value="">Todas</option>
                         </select>
                     </div>
                     <div class="filter-group">
-                        <label for="filter-priority">Por Prioridad:</label>
-                        <select id="filter-priority" class="filter-select">
+                        <label for="filtro-prioridad">Por Prioridad:</label>
+                        <select id="filtro-prioridad" class="filter-select">
                             <option value="">Todas</option>
                             <option value="alta">Alta</option>
                             <option value="media">Media</option>
                             <option value="baja">Baja</option>
-                        </select>
+                        </select> 
                     </div>
                 </div>
                 <div class="controls-right">
                     <div class="filter-group">
-                        <label for="sort-select">Ordenar por:</label>
-                        <select id="sort-select" class="filter-select">
+                        <label for="select-ordenar">Ordenar por:</label>
+                        <select id="select-ordenar" class="filter-select">
                             <option value="date-asc">Fecha (próxima primero)</option>
                             <option value="date-desc">Fecha (lejana primero)</option>
                             <option value="priority">Prioridad (Alta → Baja)</option>
@@ -57,37 +57,33 @@
 
             <!-- Contenedor de Tarjetas -->
             <section class="tasks-grid-section">
-                <div id="tasks-grid" class="tasks-grid">
+                <div id="grid-tareas" class="tasks-grid">
                     <!-- Las tarjetas se insertarán aquí con JavaScript -->
                 </div>
-                <div id="empty-state" class="empty-state">
-                    <i class="fas fa-inbox"></i>
-                    <p>No hay tareas que mostrar</p>
-                    <button id="empty-cta-btn" class="btn btn-primary">
-                        <i class="fas fa-plus"></i> Crear primera tarea
-                    </button>
+                <div id="estado-vacio" class="empty-state">
+                    
                 </div>
             </section>
         </main>
     </div>
 
     <!-- Modal para Crear/Editar Tareas -->
-    <div id="task-modal" class="modal" role="dialog" aria-labelledby="modal-title" aria-modal="true">
+    <div id="modal-tarea" class="modal" role="dialog" aria-labelledby="titulo-modal" aria-modal="true">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 id="modal-title">Nueva Tarea</h2>
-                <button id="close-modal-btn" class="btn-close" aria-label="Cerrar modal">
+                <h2 id="titulo-modal">Nueva Tarea</h2>
+                <button type="button" id="btn-cerrar-modal" class="btn-close" aria-label="Cerrar modal">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
-            <form id="task-form" class="task-form">
-                <input type="hidden" id="task-id">
+            <form id="formulario-tarea" class="task-form">
+                <input type="hidden" id="id-tarea">
 
                 <div class="form-group">
-                    <label for="field-title">Título de la Tarea *</label>
+                    <label for="campo-titulo">Título de la Tarea *</label>
                     <input 
                         type="text" 
-                        id="field-title" 
+                        id="campo-titulo" 
                         name="title" 
                         placeholder="Ej: Resumen capítulo 3"
                         required
@@ -98,10 +94,10 @@
 
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="field-subject">Materia/Área *</label>
+                        <label for="campo-materia">Materia/Área *</label>
                         <input 
                             type="text" 
-                            id="field-subject" 
+                            id="campo-materia" 
                             name="subject" 
                             placeholder="Ej: Historia"
                             required
@@ -109,8 +105,8 @@
                         >
                     </div>
                     <div class="form-group">
-                        <label for="field-priority">Prioridad *</label>
-                        <select id="field-priority" name="priority" required>
+                        <label for="campo-prioridad">Prioridad *</label>
+                        <select id="campo-prioridad" name="priority" required>
                             <option value="">Seleccionar...</option>
                             <option value="alta">Alta</option>
                             <option value="media">Media</option>
@@ -120,19 +116,19 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="field-duedate">Fecha de Entrega *</label>
+                    <label for="campo-fecha-entrega">Fecha de Entrega *</label>
                     <input 
                         type="date" 
-                        id="field-duedate" 
+                        id="campo-fecha-entrega" 
                         name="dueDate" 
                         required
                     >
                 </div>
 
                 <div class="form-group">
-                    <label for="field-description">Descripción *</label>
+                    <label for="campo-descripcion">Descripción *</label>
                     <textarea 
-                        id="field-description" 
+                        id="campo-descripcion" 
                         name="description" 
                         rows="5"
                         placeholder="Describe los detalles de la tarea..."
@@ -143,7 +139,7 @@
                 </div>
 
                 <div class="form-actions">
-                    <button type="button" id="cancel-btn" class="btn btn-secondary">
+                    <button type="button" id="btn-cancelar" class="btn btn-secondary">
                         Cancelar
                     </button>
                     <button type="submit" class="btn btn-primary">
@@ -155,13 +151,13 @@
     </div>
 
     <!-- Modal de Confirmación para Eliminación -->
-    <div id="confirm-modal" class="modal" role="dialog" aria-labelledby="confirm-title" aria-modal="true">
+    <div id="modal-confirmacion" class="modal" role="dialog" aria-labelledby="titulo-confirmacion" aria-modal="true">
         <div class="modal-content modal-confirm">
-            <h2 id="confirm-title">Confirmar eliminación</h2>
-            <p id="confirm-message">¿Estás seguro de que deseas eliminar esta tarea?</p>
+            <h2 id="titulo-confirmacion">Confirmar eliminación</h2>
+            <p id="mensaje-confirmacion">¿Estás seguro de que deseas eliminar esta tarea?</p>
             <div class="form-actions">
-                <button id="confirm-cancel" class="btn btn-secondary">Cancelar</button>
-                <button id="confirm-delete" class="btn btn-danger">Eliminar</button>
+                <button type="button" id="btn-cancelar-confirmacion" class="btn btn-secondary">Cancelar</button>
+                <button type="button" id="btn-confirmar-eliminar" class="btn btn-danger">Eliminar</button>
             </div>
         </div>
     </div>
